# defuddle-mcp

./: .gitignore  PROJECT.md  README.md  package.json  pyproject.toml
src/: client.py  main.py  tools.py
